--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "alpinejs": "^3.13.0",
+    "pnpm": "^9.11.0",
     "rfc4648": "^1.5.2"
   },
   "devDependencies": {
